# PG_practicas_5a7

./: CMakeLists.txt  leeme.txt  pract-pg.sln
Debug/PGUPV/: PGUPV.idb
Debug/PGUPV/PGUPV.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PGUPV.lastbuildstate
Debug/ej5-1/ej5-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej5-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej5-2/: vc141.idb
Debug/ej5-2/ej5-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej5-2.lastbuildstate  ej5-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej6-1/ej6-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej6-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej6-2/ej6-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej6-2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/ej6-3/: vc141.idb
Debug/ej6-3/ej6-3.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
Debug/ej7-5/: vc141.idb
PGUPV/: PGUPV.vcxproj  PGUPV.vcxproj.filters  app.cpp  boundingVolumes.cpp  directionWidget.cpp  glStateCache.cpp  texture2DGeneric.cpp  window.cpp
PGUPV/include/: GUI3.h  bindingPoint.h  fileChooserWidget.h  glStateCache.h  texture2DGeneric.h
ej5-1/: CMakeLists.txt  ej5-1.vcxproj  log.txt  main.cpp
ej5-2/: CMakeLists.txt  ej5-2.vcxproj  imgui.ini  log.txt  main.cpp
ej6-1/: CMakeLists.txt  ej6-1.vcxproj  imgui.ini  log.txt  main.cpp
ej6-2/: ej6-2.vcxproj  imgui.ini  log.txt  main.cpp
ej6-3/: CMakeLists.txt  ej6-3.vcxproj  log.txt  main.cpp
ej7-1/: CMakeLists.txt  ej7-1.vcxproj  log.txt  main.cpp
ej7-2/: CMakeLists.txt  ej7-2.vcxproj  ej7-2.vert  log.txt  main.cpp
ej7-3/: CMakeLists.txt  ej7-3.vcxproj  log.txt  main.cpp
ej7-4/: CMakeLists.txt  ej7-4.vcxproj  ej7-4.vert  imgui.ini  log.txt  main.cpp
ej7-5/: CMakeLists.txt  ej7-5.vcxproj  log.txt  main.cpp
librerias/guipg/: guipg.cpp
p5a/: log.txt  main.cpp  p5.vcxproj  textureReplace.frag  textureReplace.vert
p5b/: CMakeLists.txt  log.txt  main.cpp  p5b.vcxproj  textureReplace.frag
p6a/: ej6-2.vcxproj  gouraud.vert  imgui.ini  log.txt  main.cpp  properties.ini
p6b/: CMakeLists.txt  gouraud.frag  gouraud.vert  imgui.ini  log.txt  main.cpp  p6b.vcxproj
p7/: imgui.ini  log.txt  main.cpp  p7.geom  p7.vcxproj  properties.ini
recursos/modelos/: bunny.pgmat
(+72 files in other folders)
